# poincare-maps

./: .gitignore  Cargo.toml  README.md  config.toml  main.py  pyproject.toml  tarpaulin.toml
benches/: poincare.rs  rkf45-orbit.rs  state.rs
config/: Cargo.toml  README.md
config/src/: lib.rs  netcdf_fields.rs
equilibrium/: Cargo.toml  README.md
equilibrium/scripts/: npz_to_netcdf.py  stub_npz.py
equilibrium/src/: bfield.rs  current.rs  currents.rs  error.rs  extract.rs  harmonic.rs  lib.rs  perturbation.rs  qfactor.rs
gsl-splines/: Cargo.toml  README.md
gsl-splines/examples/: shared_acc.rs  simple_spline.rs
gsl-splines/src/: acc.rs  error.rs  evals.rs  interp_types.rs  lib.rs  spline.rs  spline2d.rs
particle/: Cargo.toml  README.md
particle/benches/: bench-map.rs  bench-state.rs
particle/src/: config.rs  error.rs  evolution.rs  initial.rs  lib.rs  mapping.rs  particle.rs  point.rs  rkf45.rs  state.rs
particle/src/solver/: henon.rs  mod.rs  rkf45.rs
particle/tests/: normal_particle.rs  normal_particle_int.rs  normal_particle_map.rs
particle/tests/common/: mod.rs
plots/: __init__.py  bfield_plots.py  data_plots.py  plot_orbit.py  poincare_plot.py  pyproject.toml
poincare/: Cargo.toml  README.md
poincare/src/: error.rs  init.rs  initials.rs  lib.rs  poincare.rs  results.rs
poincare/src/solver/: rk45.rs
poincare/tests/: test_poincare.rs
poincare/tests/common/: mod.rs
pyncare/: Cargo.toml  README.md  pyproject.toml
pyncare/pytests/: conftest.py  test_mapping.py  test_pybfield.py  test_pycurrent.py  test_pycurrents.py  test_pyevolution.py  test_pyevolution.rs  test_pyharmonic.py  test_pyparticle.py  test_pyperturbation.py  test_pypoincare.py  test_pypoincareinit.py  test_pyqfactor.py
pyncare/src/: error.rs  lib.rs  pyerrors.rs  pylibrium.rs
pyncare/src/particle/: evolution.rs  initial.rs  mapping.rs  mod.rs  particle.rs  pyevolution.rs  pyinitial.rs  pymapping.rs  pyparticle.rs
pyncare/src/poincare/: mod.rs  pyinitials.rs  pypoincare.rs
pyncare/src/pylibrium/: bfield.rs  current.rs  harmonic.rs  mod.rs  perturbation.rs  pybfield.rs  pycurrent.rs  pycurrents.rs  pyharmonic.rs  pyperturbation.rs  pyqfactor.rs  qfactor.rs
pyncare/src/pyncare/: __init__.py  _core.pyi  bfield_plots.py  current_plots.py  currents_plots.py  orbit_plot.py  poincare_plot.py  qfactor_plots.py
python/plots/: rz_plot.py
python/poincare-maps/: __init__.py
python/scripts/: particle_orbit.py
scripts/: bfield.py  bfield_plot.py  current_plot.py  currents_plot.py  henon_theta.py  henon_zeta.py  main.py  npz_to_netcdf4.py  particle.py  particle_integrate.py  particle_map.py  particle_orbit.py  poincare.py  poincare_reversal.py  qfactor_plot.py
src/: consts.rs  error.rs  evolution.rs  initial.rs  lib.rs  particle.rs  poincare.rs  point.rs  points.rs  rk45.rs  solver.rs  state.rs  system.rs  utils.rs
src/equilibrium/: bfield.rs  current.rs  harmonic.rs  mod.rs  perturbation.rs  qfactor.rs
src/solver/: henon.rs  mod.rs  rk45.rs  rkf45.rs
test-py/: conftest.py  test_bfield.py  test_current.py  test_harmonics.py  test_particle.py  test_perturbation.py  test_poincare.py  test_qfactor.py
tests/: particle_orbit_test.rs  poincare_test.rs
tokamak-netcdf/: Cargo.toml  README.md
tokamak-netcdf/src/: error.rs  lib.rs  open.rs
utils/: Cargo.toml
utils/src/: array_macros.rs  eval_macros.rs  lib.rs  misc_macros.rs  numpy_macros.rs
