[workspace]
resolver = "3"
members = [ "config","equilibrium", "particle", "poincare", "pyncare", "utils"]

[workspace.dependencies]
ndarray = "0.16.1"
thiserror = "2.0.17"
safe_unwrap = "0.4.1"
serde = {version = "1.0.228", features = ["serde_derive"]}
rsl-interpolation = { git = "https://github.com/George-Tsiamasiotis/rsl-interpolation", branch = "cache-dev" }

[workspace.package]
authors = ["George Tsiamasiotis"]

[profile.test]
opt-level = 1

[profile.release]
debug = true

# Bevy tip

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
