[package]
name = "equilibrium"
version = "0.1.0"
edition = "2024"
authors = {workspace = true}
description = "Representation of Tokamak Equilibria from experimental data."

[dependencies]
ndarray = "0.16.1"
thiserror = {workspace = true}
rsl-interpolation = {workspace = true}
tokamak-netcdf = { git = "https://github.com/George-Tsiamasiotis/tokamak-netcdf", version = "0.1.3" }

[features]
default = []
openblas-static = ["rsl-interpolation/openblas-static"]
openblas-system = ["rsl-interpolation/openblas-system"]
netcdf-static = ["tokamak-netcdf/static"]
