[package]
name = "particle"
version = "0.1.0"
edition = "2024"
authors.workspace = true

[dependencies]
serde = { workspace = true }
ndarray= {workspace = true}
thiserror = {workspace = true}
safe_unwrap = {workspace = true}
rsl-interpolation = {workspace = true}
utils= {path = "../utils"}
config = {path = "../config"}
equilibrium = {path = "../equilibrium"}
derive_is_enum_variant = "0.1.1"

[features]
default = []
error-adaptive-step = []
