[package]
name = "poincare"
version = "0.1.0"
edition = "2024"
authors = {workspace = true}

[dependencies]
ndarray = {workspace = true}
thiserror = {workspace = true}
config = {path = "../config"}
utils = {path = "../utils"}
equilibrium = {path = "../equilibrium"}
particle = {path = "../particle"}
indicatif = { version = "0.18.2", features = ["rayon"] }
rayon = "1.11.0"
