[package]
name = "pyncare"
version = "0.1.1"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]
test = false # linker issues, not needed anyway

[dependencies]
safe_unwrap = {workspace = true}
rsl-interpolation = {workspace = true}
config = {path = "../config"}
utils = {path = "../utils"}
equilibrium = {path = "../equilibrium"}
particle = {path = "../particle"}
poincare = {path = "../poincare"}
pyo3 = { version = "0.27.1", features = ["extension-module", "abi3-py314", "multiple-pymethods"] }
numpy = "0.27.0"

[features]
default = []
phase-interpolation = ["equilibrium/phase-interpolation"]
energy-adaptive-step = ["particle/energy-adaptive-step"]
openblas-static = ["equilibrium/openblas-static"]
netcdf-static = ["equilibrium/netcdf-static"]
