[project]
name = "pyncare"
version = "0.1.0"
description = "Python wrappers around the 'poincare' crate."
readme = "README.md"
authors = [
    { name = "George-Tsiamasiotis", email = "gt.develop@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
]

[tool.maturin]
module-name = "pyncare._core"
python-packages = ["pyncare"]
python-source = "src"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "ipython>=9.6.0",
    "maturin-import-hook>=0.3.0",
    "patchelf>=0.17.2.4",
    "pygobject>=3.54.5",
    "pytest>=8.4.2",
    "mypy>=1.18.2",
]

[tool.pytest.ini_options]
testpaths = "./pyncare/pytests" # Run from workspace root
addopts = "--durations 2"
