[package]
name = "tokamak-netcdf"
version = "0.1.2"
edition = "2024"
keywords = ["nc", "netcdf", "tokamak"]
documentation = "https://docs.rs/crate/tokamak-netcdf/"
authors.workspace = true
license.workspace = true
repository.workspace = true
description = """
A Package for handling NetCDF files and creating a more suitable interface for
use with reconstructed equilibira. 
"""

[dependencies]
ndarray = "0.16.1"
netcdf = { version = "0.11.0", features = ["ndarray"] }
thiserror = "2.0.12"

[features]
default = []
static = ["netcdf/static"]

[package.metadata.docs.rs]
features = ["static"]
